--- a/index.html
+++ b/index.html
@@ -10522,21 +10522,29 @@ document.getElementById("easychat-floating-button")||(document.body.appendChild(
 </div><iframe allow="join-ad-interest-group" data-tagging-id="AW-1022053025" data-load-time="1755483613293" height="0" width="0" src="./index_files/1022053025.html" style="display: none; visibility: hidden;"></iframe>
 
 </script>
-    <script>
-        (function () {
-            var w = window; var ic = w.Intercom;
-            if (typeof ic === "function") { ic('reattach_activator'); ic('update', intercomSettings); }
-            else {
-                var d = document; var i = function () { i.c(arguments) }; i.q = [];
-                i.c = function (args) { i.q.push(args) }; w.Intercom = i;
-                function l() {
-                    var s = d.createElement('script'); s.type = 'text/javascript'; s.async = true;
-                    s.src = "https://widget.intercom.io/widget/your_app_id";
-                    var x = d.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
-                }
-                if (w.attachEvent) { w.attachEvent('onload', l); } else { w.addEventListener('load', l, false); }
-            }
-        })();
-    </script>
+<script>
+  window.intercomSettings = {
+    app_id: "lu3dtr42"
+  };
+</script>
+<script>
+  (function(){
+    var w=window;var ic=w.Intercom;
+    if(typeof ic==="function"){
+      ic('reattach_activator');
+      ic('update',intercomSettings);
+    } else {
+      var d=document;var i=function(){i.c(arguments)};i.q=[];
+      i.c=function(args){i.q.push(args)};w.Intercom=i;
+      function l(){
+        var s=d.createElement('script');s.type='text/javascript';s.async=true;
+        s.src="https://widget.intercom.io/widget/lu3dtr42";
+        var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
+      }
+      if(w.attachEvent){w.attachEvent('onload',l);}
+      else{w.addEventListener('load',l,false);}
+    }
+  })();
+</script>
 
 </body></html>
